--- a/src/components/PinForm.module.css
+++ b/src/components/PinForm.module.css
@@ -9,7 +9,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 1000; /* Gör att overlay kommer ovanpå allt annat */
+  z-index: 1000;
+  overflow: auto;
 }
 
 /* Modal container */
@@ -17,11 +18,12 @@
   background-color: #000000;
   padding: 20px;
   width: 400px;
-
+  height: 400px;
   position: relative;
   height: 100vh;
   color: #fff;
-  overflow-y: auto;
+  /* overflow-y: auto; */
+  overflow: scroll;
   display: flex;
   flex-direction: column;
   gap: 1rem;
@@ -55,7 +57,6 @@
   min-height: 100px;
 }
 
-/* Button styles */
 .modalContent button {
   color: white;
   border: none;
