--- a/src/components/UploadImage.module.css
+++ b/src/components/UploadImage.module.css
@@ -8,7 +8,7 @@
 
 .dropzone > p {
   padding: 1rem;
-
+  margin: 0;
   font-size: 1rem;
 }
 
